--- a/shared/style_unstable/tabs/index.html
+++ b/shared/style_unstable/tabs/index.html
@@ -51,23 +51,23 @@
 
   <section role="region">
     <!-- if your tabs are at the top, remove class="bottom" -->
-    <ul role="tablist" data-items="4" class="bottom">
-      <li id="panel1" role="tab">
+    <article role="tablist" data-items="4" class="bottom">
+      <section id="panel1" role="tab">
         <a href="#panel1" class="icon">comms</a>
         <div role="tabpanel"></div>
-      </li>
-      <li id="panel2" role="tab">
+      </section>
+      <section id="panel2" role="tab">
         <a href="#panel2" class="icon">contacts</a>
         <div role="tabpanel"></div>
-      </li>
-      <li id="panel3" role="tab" aria-disabled="true">
+      </section>
+      <section id="panel3" role="tab" aria-disabled="true">
         <a class="icon">dialer</a>
         <div role="tabpanel"></div>
-      </li>
-      <li id="panel4" role="tab">
+      </section>
+      <section id="panel4" role="tab">
         <a href="#panel4">Tab name</a>
         <div role="tabpanel"></div>
-      </li>
+      </section>
     </ul>
   </section>
 
