--- a/apps/communications/dialer/index.html
+++ b/apps/communications/dialer/index.html
@@ -85,7 +85,7 @@
                 <div id="fake-phone-number-view"></div>
               </div>
             </div>
-            <div id="keypad-delete" class="grid-cell grid-v-align" data-value="delete">
+            <div id="keypad-delete" class="grid-cell grid-v-align hide" data-value="delete">
               <div>
               </div>
             </div>
